# chip8_rs

./: Cargo.toml  LICENSE  README.md  index.html  input.css  style.css
examples/: chip8_sdl2.rs
src/: chip8.rs  chip8_sdl2.rs  lib.rs  main.rs
wasm/: Cargo.toml
wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
